--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body, html {
   height: 100%;
   overflow: hidden;
   font-family: 'Orbitron', sans-serif;
+  zoom: 1;
 }
 
 /* Video Background Styling */
