--- a/style.css
+++ b/style.css
@@ -21,14 +21,13 @@ body, html {
 
 /* Comment out for testing */
 .video-background {
-  /* position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  overflow: hidden; */
-  display: none;  /* Temporarily hide video background */
+  overflow: hidden;  /* Temporarily hide video background */
 }
 
 
