--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body, html {
 
 
 /* Comment out for testing */
+/* Video Background Styling */
 .video-background {
   position: fixed;
   top: 0;
@@ -27,9 +28,8 @@ body, html {
   width: 100%;
   height: 100%;
   z-index: -1;
-  overflow: hidden;  /* Temporarily hide video background */
+  overflow: hidden;
 }
-
 
 #bg-video {
   width: 100%;
